@@ -10,10 +10,10 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 
-import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_CREATE;
-import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_DELETE;
-import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_READ;
-import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_UPDATE;
+//import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_CREATE;
+//import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_DELETE;
+//import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_READ;
+//import static psf.ucitavanje.obrazaca.security.user.Permission.ADMIN_UPDATE;
 import static psf.ucitavanje.obrazaca.security.user.Permission.MANAGER_CREATE;
 import static psf.ucitavanje.obrazaca.security.user.Permission.MANAGER_DELETE;
 import static psf.ucitavanje.obrazaca.security.user.Permission.MANAGER_READ;
@@ -22,39 +22,39 @@ import static psf.ucitavanje.obrazaca.security.user.Permission.MANAGER_UPDATE;
 @RequiredArgsConstructor
 public enum Role {
 
-  USER(Collections.emptySet()),
-  ADMIN(
-          Set.of(
-                  ADMIN_READ,
-                  ADMIN_UPDATE,
-                  ADMIN_DELETE,
-                  ADMIN_CREATE,
-                  MANAGER_READ,
-                  MANAGER_UPDATE,
-                  MANAGER_DELETE,
-                  MANAGER_CREATE
-          )
-  ),
-  MANAGER(
-          Set.of(
-                  MANAGER_READ,
-                  MANAGER_UPDATE,
-                  MANAGER_DELETE,
-                  MANAGER_CREATE
-          )
-  )
+    USER(Collections.emptySet()),
+    ADMIN(Collections.emptySet()
+//          Set.of(
+//                  ADMIN_READ,
+//                  ADMIN_UPDATE,
+//                  ADMIN_DELETE,
+//                  ADMIN_CREATE,
+//                  MANAGER_READ,
+//                  MANAGER_UPDATE,
+//                  MANAGER_DELETE,
+//                  MANAGER_CREATE
+//          )
+    ),
+    MANAGER(
+            Set.of(
+                    MANAGER_READ,
+                    MANAGER_UPDATE,
+                    MANAGER_DELETE,
+                    MANAGER_CREATE
+            )
+    );
 
-  ;
+    @Getter
+    private final Set<Permission> permissions;
 
-  @Getter
-  private final Set<Permission> permissions;
+    public List<SimpleGrantedAuthority> getAuthorities() {
+        var authorities = getPermissions()
+                .stream()
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+        // authorities.add(new SimpleGrantedAuthority(this.name()));
 
-  public List<SimpleGrantedAuthority> getAuthorities() {
-    var authorities = getPermissions()
-            .stream()
-            .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-            .collect(Collectors.toList());
-    authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
-    return authorities;
-  }
+        return authorities;
+    }
 }
